# playground-2025

./: .env.example  .env.testing  .gitignore  .zshrc  Caddyfile  Cargo.toml  Dockerfile  README.md  biome.json  compose.yml  composer.json  dev.md  orval.config.ts  package-lock.json  package.json  phpstan.neon  phpunit.xml  plan.md  pnpm-lock.yaml  pyproject.toml  tsconfig.json  vite.config.js  vite.config.ts
.devdev/: README.md
amplitude-try/: README.md
antigravity-try/: README.md
app/: a.py  main.py
apple-container-try/: README.md
arkregex-try/: README.md  biome.json  package.json  pnpm-lock.yaml
arktype-try/: README.md  package.json  pnpm-lock.yaml  tsconfig.json
atuin-try/: README.md
aws-api-gateway-portals/: README.md
aws-appconfig/: README.md  appconfig.tf
aws-application-signals-try/: README.md  main.py  otel-config.yml  pyproject.toml
aws-billing-get-invoice-pdf/: README.md
aws-cli-login/: README.md
aws-cloudwatch-rum-try/: .env  README.md  package.json  pnpm-lock.yaml
aws-cognito-go/: go.mod  go.sum  handle.go  main.go
aws-devops-agent/: README.md
aws-iot-core-raspberrypi/: README.md
aws-iot-greengrass-raspberrypi/: README.md
aws-kiro-try/: README.md
aws-lambda-durable-functions-try/: .gitignore  README.md  Taskfile.yml  pyproject.toml  samconfig.toml  template.yaml
aws-lambda-managed-instances-try/: .gitignore  README.md  lambda.tf  lambda_capacity_provider.tf  lambda_capacity_provider_role.tf  lambda_role.tf  lambda_sg.tf  main.tf  vpc.tf
aws-lightsail-try/: README.md
aws-mcp-try/: README.md
aws-migration-evaluator/: README.md
aws-otel-collector-go-try/: README.md  compose.yml  go.mod  go.sum  main.go  otel-collector-config.yaml  tracer.go
aws-route53-resolver/: README.md
aws-route53-wildcard-record/: README.md
aws-s3-source-codepipeline/: README.md
aws-s3-table-bucket/: README.md
aws-s3-table-rest-api/: README.md  pyproject.toml
aws-s3-table-rest-api/app/: api.py  main.py
aws-s3-vectors/: README.md  create.py  pyproject.toml  search.py
aws-storage-gateway-try/: README.md
aws-systems-manager-automation-try/: README.md
aws-systems-manager-hybrit-activation/: README.md
aws-verified-access-try/: README.md
azure-devops/: README.md
azure-static-web-apps-try/: .gitignore  README.md  package.json  pnpm-lock.yaml  swa-cli.config.json
azure-web-staticapp-try/: README.md  swa-cli.config.json
backstage-try/: README.md  catalog-info.yaml
better-auth-try/: .gitignore  README.md  package.json  pnpm-lock.yaml
bootstrap/: app.php  providers.php
bytebase-try/: README.md  compose.yml
caddy-try/: Caddyfile  README.md
chatgpt-atlas-try/: README.md
claude-code-action/: README.md
claude-code-httpcallapp/: .gitignore  CLAUDE.md  README.md  go.mod  main.go
cli-essential/: README.md
cline-try/: README.md
cloudbeaver-try/: README.md  compose.yml
cloudflare-tunnel/: README.md
cloudflare-zstd-beta/: README.md
coder-multiple-container/: .gitignore  README.md
coder-try/: README.md  compose.yml
colima-mac-containerd-try/: README.md
config/: aeroview.php  app.php  database.php  livewire.php  session.php
containerd-colima-try/: README.md
containerd-try-on-ubuntu/: README.md  go.mod  go.sum  main.go
cpp-try/: Makefile  README.md  main.cpp
dagger-go-echo-sqlc/: CALUDE.md  Dockerfile  dagger.json  docker-compose.yml  go.mod  go.sum  main.go  main_test.go  sqlc.yaml
dagger-go-echo-try/: README.md  dagger.json  docker-compose.yml  go.mod
dagger-try/: README.md
dagster-try/: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
dagster-try/dagster_try/: assets.py  definitions.py
databricks-try/: README.md
deno-otel-try/: README.md  compose.yml  deno.json  main.ts
devcontainer-docker-outsideof-docker/: README.md
devcontainer-multi-try/: README.md  Taskfile.yml  compose.yml
discord-webhook-try/: README.md
doltgresql-try/: .gitignore  README.md
dotnet-webapp-try/: Program.cs  README.md  dotnet-webapp-try.csproj
earthly-try/: Earthfile  README.md
elasticsearch-local/: .env.example  README.md  start.sh  uninstall.sh
envoy-go-docker-try/: Dockerfile  README.md  compose.yml  envoy.yaml  go.mod  main.go
envoy-reverse-proxy-try/: README.md  compose.yml  envoy.yaml
evidence-retry/: README.md  compose.yml  init.sql  package-lock.json  package.json
flipt-try/: README.md  compose.yml
fuego-try/: README.md  go.mod  main.go
gemini-api-go-try/: README.md  go.mod  main.go
gitlabci-try/: .gitlab-ci.yml  README.md
gleam-try/: README.md  gleam.toml
gleam-wisp-try/: README.md  gleam.toml
go-124-tool-directive/: README.md  go.mod  main.go
go-atlas-try/: README.md  compose.yml  schema.hcl
go-bluetooth-try/: README.md  go.mod  go.sum  main.go
go-daemon-try/: README.md  go.mod  main.go  service.go
go-evdev/: README.md  go.mod  main.go  mapping.go
go-go-daemon-try/: README.md  go.mod  go.sum  main.go
go-golangci-lint-try/: README.md
go-gotest.tools-golden/: README.md  go.mod  main.go  main_test.go
go-mcp-try/: README.md  go.mod  main.go
go-snaps-try/: README.md  (+3 more)
openai-api-web-search-try/: README.md  pyproject.toml
openai-api-web-search-try/lib/: app.py
python-ty-try/: README.md  pyproject.toml
python-ty-try/app/: main.py
rust-sqlx-mysql-try/: .env  Cargo.toml  README.md  compose.yml  dbinit.sql
rust-sqlx-mysql-try/src/: main.rs
soco-try/: README.md  pyproject.toml
soco-try/lib/: app.py
uv-fastmcp-try/: README.md  pyproject.toml
uv-fastmcp-try/app/: main.py
(+754 files in other folders)
