[project]
name = "logstat"
version = "0.1.0"
description = "logstat"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit>=1.46.1",
]

# [tool.uv]
# package = true

[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ['app', 'tools']

[project.scripts]
dev = "tools.main:dev"
