[project]
name = "aws-s3-table-rest-api"
version = "0.1.0"
description = "try AWS S3 Tables with web app"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.39.9",
    "fastapi>=0.116.1",
    "pandas>=2.3.1",
    "pyarrow>=21.0.0",
    "pydantic>=2.11.7",
    "pyiceberg>=0.9.1",
    "uvicorn>=0.35.0",
]

[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ['app']

[project.scripts]
start = "app.main:main"
