[tool.poetry]
name = "openai-api-web-search-try"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [
  { include = "lib" }
]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.66.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dev = "lib.app:main"
