[tool.poetry]
name = "python-ty-try"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.scripts]
dev = 'app.main:main'

[tool.poetry.group.dev.dependencies]
taskipy = "^1.14.1"
ty = "^0.0.1a1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
check = "ty check"
