[tool.poetry]
name = "soco-try"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [
  { include = "lib" }
]

[tool.poetry.dependencies]
python = "^3.11"
soco = "^0.30.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dev = "lib.app:main"
